--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 */.idea
+*/.idea/.gitignore
 */.vscode
 */cmake-build-debug
 */cmake-build-release
