--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+.idea/.gitignore
+.idea/*
+.idea
 */.idea
-*/.idea/.gitignore
 */.vscode
 */cmake-build-debug
 */cmake-build-release
