--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,21 @@
 cmake_minimum_required(VERSION 3.27)
-project(cppLR2)
+project(untitled3)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(cppLR2 main.cpp
-        Matrix.cpp
-        MatrixTest.cpp
-        MatrixTest.h)
+add_executable(untitled3 main.cpp
+        Polygon.cpp
+        Polygon.h
+        Triangle.cpp
+        Triangle.h
+        Tetragon.cpp
+        Tetragon.h
+        Factory.cpp
+        Factory.h
+        Menu.cpp
+        Menu.h
+        TestTriangle.cpp
+        TestTriangle.h
+        TestTetragon.cpp
+        TestTetragon.h
+)
